# serializer version: 1
# name: test_air_quality_current_conditions_snapshot[aut_umwelt][_indexes]
  list([
    Index(
      aqi=82,
      aqi_display='82',
      category='excellent_air_quality',
      code='uaqi',
      color=Color(
        blue=0.20784314,
        green=0.73333335,
        red=0.30980393,
      ),
      display_name='Universal AQI',
      dominant_pollutant='pm25',
    ),
    Index(
      aqi=2,
      aqi_display='2',
      category='2_light_green',
      code='aut_umwelt',
      color=Color(
        blue=0.4,
        green=1.0,
        red=0.8,
      ),
      display_name='AQI (AT)',
      dominant_pollutant='o3',
    ),
  ])
# ---
# name: test_air_quality_current_conditions_snapshot[aut_umwelt][_pollutants]
  list([
    Pollutant(
      code='co',
      concentration=Concentration(
        units='ppb',
        value=337.06,
      ),
      display_name='CO',
      full_name='Carbon monoxide',
    ),
    Pollutant(
      code='no2',
      concentration=Concentration(
        units='ppb',
        value=16.67,
      ),
      display_name='NO2',
      full_name='Nitrogen dioxide',
    ),
    Pollutant(
      code='o3',
      concentration=Concentration(
        units='ppb',
        value=19.94,
      ),
      display_name='O3',
      full_name='Ozone',
    ),
    Pollutant(
      code='pm10',
      concentration=Concentration(
        units='µg/m³',
        value=18.48,
      ),
      display_name='PM10',
      full_name='Inhalable particulate matter (<10µm)',
    ),
    Pollutant(
      code='pm25',
      concentration=Concentration(
        units='µg/m³',
        value=11.0,
      ),
      display_name='PM2.5',
      full_name='Fine particulate matter (<2.5µm)',
    ),
    Pollutant(
      code='so2',
      concentration=Concentration(
        units='ppb',
        value=0.16,
      ),
      display_name='SO2',
      full_name='Sulfur dioxide',
    ),
  ])
# ---
# name: test_air_quality_current_conditions_snapshot[aut_umwelt][category_normalized]
  '2_light_green'
# ---
# name: test_air_quality_current_conditions_snapshot[aut_umwelt][category_original]
  '2 - Light green'
# ---
# name: test_air_quality_current_conditions_snapshot[aut_umwelt][date_time]
  datetime.datetime(2025, 12, 10, 17, 0, tzinfo=datetime.timezone.utc)
# ---
# name: test_air_quality_current_conditions_snapshot[aut_umwelt][region_code]
  'at'
# ---
# name: test_air_quality_current_conditions_snapshot[bra_saopaulo][_indexes]
  list([
    Index(
      aqi=76,
      aqi_display='76',
      category='good_air_quality',
      code='uaqi',
      color=Color(
        blue=0.20392157,
        green=0.77254903,
        red=0.4117647,
      ),
      display_name='Universal AQI',
      dominant_pollutant='pm10',
    ),
    Index(
      aqi=20,
      aqi_display='20',
      category='n1_good_air_quality',
      code='bra_saopaulo',
      color=Color(
        blue=None,
        green=0.8,
        red=None,
      ),
      display_name='AQI (BR)',
      dominant_pollutant='pm10',
    ),
  ])
# ---
# name: test_air_quality_current_conditions_snapshot[bra_saopaulo][_pollutants]
  list([
    Pollutant(
      code='co',
      concentration=Concentration(
        units='ppb',
        value=690.8,
      ),
      display_name='CO',
      full_name='Carbon monoxide',
    ),
    Pollutant(
      code='no2',
      concentration=Concentration(
        units='ppb',
        value=30.3,
      ),
      display_name='NO2',
      full_name='Nitrogen dioxide',
    ),
    Pollutant(
      code='o3',
      concentration=Concentration(
        units='ppb',
        value=7.16,
      ),
      display_name='O3',
      full_name='Ozone',
    ),
    Pollutant(
      code='pm10',
      concentration=Concentration(
        units='µg/m³',
        value=27.43,
      ),
      display_name='PM10',
      full_name='Inhalable particulate matter (<10µm)',
    ),
    Pollutant(
      code='pm25',
      concentration=Concentration(
        units='µg/m³',
        value=14.72,
      ),
      display_name='PM2.5',
      full_name='Fine particulate matter (<2.5µm)',
    ),
    Pollutant(
      code='so2',
      concentration=Concentration(
        units='ppb',
        value=1.26,
      ),
      display_name='SO2',
      full_name='Sulfur dioxide',
    ),
  ])
# ---
# name: test_air_quality_current_conditions_snapshot[bra_saopaulo][category_normalized]
  'n1_good_air_quality'
# ---
# name: test_air_quality_current_conditions_snapshot[bra_saopaulo][category_original]
  'N1 – Good air quality'
# ---
# name: test_air_quality_current_conditions_snapshot[bra_saopaulo][date_time]
  datetime.datetime(2026, 1, 9, 7, 0, tzinfo=datetime.timezone.utc)
# ---
# name: test_air_quality_current_conditions_snapshot[bra_saopaulo][region_code]
  'br'
# ---
# name: test_air_quality_current_conditions_snapshot[deu_uba][_indexes]
  list([
    Index(
      aqi=71,
      aqi_display='71',
      category='good_air_quality',
      code='uaqi',
      color=Color(
        blue=0.2,
        green=0.79607844,
        red=0.48235294,
      ),
      display_name='Universal AQI',
      dominant_pollutant='o3',
    ),
    Index(
      aqi=None,
      aqi_display=None,
      category='good_air_quality',
      code='deu_uba',
      color=Color(
        blue=0.6666667,
        green=0.8039216,
        red=0.3137255,
      ),
      display_name='LQI (DE)',
      dominant_pollutant='no2',
    ),
  ])
# ---
# name: test_air_quality_current_conditions_snapshot[deu_uba][_pollutants]
  list([
    Pollutant(
      code='co',
      concentration=Concentration(
        units='ppb',
        value=191.97,
      ),
      display_name='CO',
      full_name='Carbon monoxide',
    ),
    Pollutant(
      code='no2',
      concentration=Concentration(
        units='ppb',
        value=16.97,
      ),
      display_name='NO2',
      full_name='Nitrogen dioxide',
    ),
    Pollutant(
      code='o3',
      concentration=Concentration(
        units='ppb',
        value=35.17,
      ),
      display_name='O3',
      full_name='Ozone',
    ),
    Pollutant(
      code='pm10',
      concentration=Concentration(
        units='µg/m³',
        value=13.53,
      ),
      display_name='PM10',
      full_name='Inhalable particulate matter (<10µm)',
    ),
    Pollutant(
      code='pm25',
      concentration=Concentration(
        units='µg/m³',
        value=4.61,
      ),
      display_name='PM2.5',
      full_name='Fine particulate matter (<2.5µm)',
    ),
    Pollutant(
      code='so2',
      concentration=Concentration(
        units='ppb',
        value=1.37,
      ),
      display_name='SO2',
      full_name='Sulfur dioxide',
    ),
  ])
# ---
# name: test_air_quality_current_conditions_snapshot[deu_uba][category_normalized]
  'good_air_quality'
# ---
# name: test_air_quality_current_conditions_snapshot[deu_uba][category_original]
  'Good air quality'
# ---
# name: test_air_quality_current_conditions_snapshot[deu_uba][date_time]
  datetime.datetime(2025, 5, 25, 8, 0, tzinfo=datetime.timezone.utc)
# ---
# name: test_air_quality_current_conditions_snapshot[deu_uba][region_code]
  'de'
# ---
# name: test_air_quality_current_conditions_snapshot[isr_moep][_indexes]
  list([
    Index(
      aqi=74,
      aqi_display='74',
      category='good_air_quality',
      code='uaqi',
      color=Color(
        blue=0.2,
        green=0.78431374,
        red=0.44705883,
      ),
      display_name='Universal AQI',
      dominant_pollutant='pm10',
    ),
    Index(
      aqi=-250,
      aqi_display='-250',
      category=None,
      code='isr_moep',
      color=Color(
        blue=0.13725491,
        green=None,
        red=0.49411765,
      ),
      display_name='AQI (IL)',
      dominant_pollutant='pm10',
    ),
  ])
# ---
# name: test_air_quality_current_conditions_snapshot[isr_moep][_pollutants]
  list([
    Pollutant(
      code='co',
      concentration=Concentration(
        units='ppb',
        value=233.16,
      ),
      display_name='CO',
      full_name='Carbon monoxide',
    ),
    Pollutant(
      code='no2',
      concentration=Concentration(
        units='ppb',
        value=23.1,
      ),
      display_name='NO2',
      full_name='Nitrogen dioxide',
    ),
    Pollutant(
      code='o3',
      concentration=Concentration(
        units='ppb',
        value=30.79,
      ),
      display_name='O3',
      full_name='Ozone',
    ),
    Pollutant(
      code='pm10',
      concentration=Concentration(
        units='µg/m³',
        value=29.12,
      ),
      display_name='PM10',
      full_name='Inhalable particulate matter (<10µm)',
    ),
    Pollutant(
      code='pm25',
      concentration=Concentration(
        units='µg/m³',
        value=8.11,
      ),
      display_name='PM2.5',
      full_name='Fine particulate matter (<2.5µm)',
    ),
    Pollutant(
      code='so2',
      concentration=Concentration(
        units='ppb',
        value=1.66,
      ),
      display_name='SO2',
      full_name='Sulfur dioxide',
    ),
    Pollutant(
      code='nox',
      concentration=Concentration(
        units='ppb',
        value=18.54,
      ),
      display_name='NOx',
      full_name='Nitrogen oxides',
    ),
  ])
# ---
# name: test_air_quality_current_conditions_snapshot[isr_moep][category_normalized]
  None
# ---
# name: test_air_quality_current_conditions_snapshot[isr_moep][category_original]
  None
# ---
# name: test_air_quality_current_conditions_snapshot[isr_moep][date_time]
  datetime.datetime(2026, 2, 3, 8, 0, tzinfo=datetime.timezone.utc)
# ---
# name: test_air_quality_current_conditions_snapshot[isr_moep][region_code]
  'il'
# ---
